--- a/assets/style.css
+++ b/assets/style.css
@@ -4,6 +4,11 @@
 *::before,*::after{
     box-sizing: border-box;
 }
+:root{
+    --answer-wrong-color: red;
+    --answer-correct-color: green;
+    --netural-color: blue;
+}
 body{
     padding: 0;
     margin: 0;
@@ -12,4 +17,12 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: var(--netural-color);
+}
+
+body.correct{
+    background-color: var(--answer-correct-color);
+}
+body.correct {
+    background-color: var(--answer-wrong-color);
 }
