--- a/assets/style.css
+++ b/assets/style.css
@@ -23,7 +23,7 @@ body{
 body.correct{
     background-color: var(--answer-correct-color);
 }
-body.correct {
+body.wrong {
     background-color: var(--answer-wrong-color);
 }
 .container{
@@ -72,4 +72,7 @@ body.correct {
 }
 .hide{
     display: none;
+}
+#gameOver{
+    background-color: purple;
 }
