fix all functions besides setinterval

--- a/assets/style.css
+++ b/assets/style.css
@@ -74,5 +74,11 @@ body.wrong {
     display: none;
 }
 #gameOver{
-    background-color: purple;
+    /* background-color: purple; */
+}
+#displayScore{
+    background-color:cornflowerblue
+}
+li:first-child{
+    background-color: chartreuse;
 }
