--- a/assets/style.css
+++ b/assets/style.css
@@ -7,7 +7,9 @@
 :root{
     --answer-wrong-color: red;
     --answer-correct-color: green;
+    
     --netural-color: blue;
+    
 }
 body{
     padding: 0;
@@ -59,7 +61,8 @@ body.wrong {
     background-color: var(--answer-wrong-color);
 }
 
-.start-btn, .playAgain-btn{
+.start-btn, .playAgain-btn, .clearScores-btn{
+    
     font-size:2.0rem;
     font-weight: bold;
     padding:10px 20px
@@ -77,8 +80,18 @@ body.wrong {
     /* background-color: purple; */
 }
 #displayScore{
-    background-color:cornflowerblue
+    background-color:cornflowerblue;
+    border-radius: 5px;
+    padding: 5px 10px;
+    box-shadow: 0 0 15px 2px;
+    background-image: linear-gradient(135deg, #52E5E7 10%, #130CB7 100%);
+
 }
+#displayScore input{
+border-radius: 2px;
+box-shadow: 0 0 15px 2px;
+}
+
 li:first-child{
     background-color: chartreuse;
 }
