--- a/assets/style.css
+++ b/assets/style.css
@@ -13,7 +13,7 @@
   --aliceblue: aliceblue;
   --darkblue: #130cb7;
   --mediumslateblue: mediumslateblue;
-  --grayblue: #90caf9;
+  --lightgray: lightgray;
   --chartreuse: chartreuse;
   --display-flex: flex;
 
@@ -29,12 +29,26 @@ body {
   align-items: var(--center);
   background-color: var(--netural-color);
 }
-
+#timerText {
+  display: var(--display-flex);
+  justify-content: var(--center);
+  align-items: var(--center);
+}
 body.correct {
   background-color: var(--answer-correct-color);
 }
 body.wrong {
   background-color: var(--answer-wrong-color);
+}
+#gameRules h1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#gameRules p {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .container {
   width: 800px;
@@ -42,7 +56,7 @@ body.wrong {
   background-color: var(--aliceblue);
   border-radius: 5px;
   padding: 10px;
-  box-shadow: 0 0 15px 2px;
+  box-shadow: 0 0 50px 2px;
 }
 .btn-layout {
   display: grid;
@@ -64,16 +78,33 @@ body.wrong {
   background-color: var(--orange-color);
   border: 2.5px solid gray;
   border-radius: 5px;
+  transform: translateY(4px);
+  margin-bottom: 2%;
 }
+
 .btn:hover {
   border-color: var(--mediumslateblue);
   opacity: 30%;
   background-color: var(--darkblue);
+  transform: translateY(5px);
+}
+#submit-answer:hover {
+  background-color: black;
+  opacity: 100%;
+  color: red;
+  transform: translateY(5px);
+}
+.start-btn:hover {
+  background-color: black;
+  opacity: 100%;
+  color: red;
+  transform: translateX(15px);
 }
 #questions {
   font-family: "Fuzzy Bubbles", cursive;
   font-weight: bold;
   font-size: 2.5em;
+  text-align: center;
 }
 .btn.correct {
   background-color: var(--answer-correct-color);
@@ -100,21 +131,19 @@ body.wrong {
   display: var(--display-flex);
   justify-content: var(--center);
   align-items: var(--center);
-
-  /* justify-content: space-between; */
 }
 .hide {
   display: none;
 }
 #gameOver {
-  /* background-color: purple; */
   font-family: "Fuzzy Bubbles", cursive;
   font-weight: bold;
 }
 #displayScore {
-  background-color: var(--grayblue);
+  background-color: var(--lightgray);
   border-radius: 5px;
   padding: 5px 10px;
+  border: 2.5px solid var(--darkblue);
 }
 #displayScore input {
   margin-top: 5%;
